--- a/src/main/resources/com/atm/Statement.fxml
+++ b/src/main/resources/com/atm/Statement.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.atm.Statement">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.atm.Statement">
    <children>
       <Text layoutX="175.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Card No. :">
          <font>
@@ -48,5 +46,10 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
+      <Text layoutX="232.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acount Statement" underline="true">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
